# clld-ipachart-plugin

./: README.md  RELEASING.md  setup.cfg  setup.py
src/clld_ipachart_plugin/: models.py  util.py
tests/: conftest.py  test_models.py  test_util.py
tests/cldf/: Wordlist-metadata.json  forms.csv
