[metadata]
license_file = LICENSE

[bdist_wheel]
universal = 1

[flake8]
ignore = E711,E712,D100,D101,D103,D102,D301
max-line-length = 100
exclude = .tox

[tool:pytest]
minversion = 5
testpaths = tests
addopts =
    --cov

[coverage:run]
source =
    clld_ipachart_plugin
    tests

[coverage:report]
show_missing = true

[easy_install]
zip_ok = false
