[metadata]
name = clld-ipachart-plugin
version = 0.3.0
license_file = LICENSE
author = Robert Forkel
author_email = dlce.rdm@eva.mpg.de
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
description = Render IPA charts in clld apps.
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://github.com/clld/clld-ipachart-plugin/issues
url = https://github.com/clld/clld-ipachart-plugin

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    =src
install_requires =
    clld>=7
    pyclts
    pycldf
    sqlalchemy
    zope.interface

[options.extras_require]
dev =
    flake8
    twine
    wheel
    build
test =
    pytest
    pytest-mock
    pytest-cov
    tox

[options.packages.find]
include = clld_ipachart_plugin
where = src

[bdist_wheel]
universal = 1

[easy_install]
zip_ok = false

[tool:pytest]
addopts = --cov
testpaths = tests
filterwarnings =
    ignore::sqlalchemy.exc.RemovedIn20Warning

[tox:tox]
envlist = py38, py39, py310, py311, py312
isolated_build = true
skip_missing_interpreter = true

[testenv]
deps = .[test]
commands = pytest {posargs}

[flake8]
ignore = E711,E712,D100,D101,D103,D102,D301
max-line-length = 100
exclude = .tox

[coverage:run]
source =
    clld_ipachart_plugin
    tests

[coverage:report]
show_missing = true
